v2.0.1 - Z-index fix submenu

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -170,7 +170,7 @@ iframe{
     top: 20px;
     height: 0;
     margin-left: -170px;
-    z-index: 0;
+    z-index: 1;
 }
 .float-box.attached{
     margin-top: 10px;
@@ -236,8 +236,8 @@ iframe{
     height: 65px;
     white-space: nowrap;
     box-shadow: 0 0 5px #9e9d9d;
-    z-index: 1;
     transition: height 250ms linear;
+    z-index: 2;
 }
 .compact-header{
     border-top: 5px #006fb9 solid;
